# aws-cmp-secrets

./: LICENSE  README.md  pyproject.toml  requirements-ci.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ci/: run-flake8.sh
src/aws_cmp_secrets/: cmp_secrets.py
tests/: test_cmp_secrets.py
