[build-system]
requires = ["setuptools >=64", "setuptools_scm[toml] >=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_cmp_secrets"
authors = [
    {name = "Zdenek Styblik"},
]
description = "Compare secrets stored in AWS Secrets Manager"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["aws"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "version"]

[project.scripts]
aws_cmp_secrets = "aws_cmp_secrets.cmp_secrets:main"

[project.urls]
Repository = "https://github.com/zstyblik/aws-cmp-secrets.git"
Issues = "https://github.com/zstyblik/aws-cmp-secrets/issues"

[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'
unstable = false

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
# Nothing so far.
